--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/exploring_ind_alleles_files.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/exploring_ind_alleles_files.ipynb
@@ -6,12 +6,16 @@
    "source": [
     "## Getting a grip on minor allele frequenecs for multiallelic data\n",
     "\n",
-    "I want to better understand the distribution of frequencies of minor alleles."
+    "I want to better understand the distribution of frequencies of minor alleles.\n",
+    "\n",
+    "Specific things to explore:\n",
+    "- average number of reads per locus in individual\n",
+    "- for loci with two or more alleles in an individual, frequency of minor alleles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,20 +34,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ind_all = open(\"test_ind_alleles.tsv\", \"r\")\n",
+    "ind_all = open(\"FG001.alleles.tsv\", \"r\")\n",
     "lines = ind_all.readlines()[1:] # get rid of header\n",
     "\n",
     "biglist_for_array = []\n",
     "for line in lines:\n",
-    "    linelist = line.strip().split()[2:]\n",
-    "    biglist_for_array.append(linelist)\n",
-    "\n"
+    "    linelist = line.strip().split()[2:] # exclude first two columns, not useful info\n",
+    "    biglist_for_array.append(linelist) # make list of lists for array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['6' 'A' '30.00' '3']\n",
+      " ['6' 'C' '70.00' '7']\n",
+      " ['13' 'C' '45.66' '205']\n",
+      " ['13' 'T' '54.34' '244']\n",
+      " ['18' 'CCA' '34.76' '65']\n",
+      " ['18' 'TTA' '0.53' '1']\n",
+      " ['18' 'TTG' '64.71' '121']\n",
+      " ['21' 'A' '57.02' '134']\n",
+      " ['21' 'C' '42.55' '100']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = np.array(biglist_for_array) # convert to array\n",
+    "print r[0:9,] # check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find out how many alleles possible per genotype in this individual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['6', '13', '18', '21', '32', '35', '41', '42', '54']\n",
+      "\n",
+      "Your file has 4958 loci.\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_locus_names = [] # get locus names, incl redundant\n",
+    "for row in r:\n",
+    "    locus_name = row[0]\n",
+    "    all_locus_names.append(locus_name)\n",
+    "    \n",
+    "unique_locus_names = [] # just unique locus names in order\n",
+    "for name in all_locus_names:\n",
+    "    if name not in unique_locus_names:\n",
+    "        unique_locus_names.append(name) \n",
+    "print unique_locus_names[0:9] # print first few to check\n",
+    "\n",
+    "num_loci = len(unique_locus_names)\n",
+    "print \"\\nYour file has \" + str(num_loci) + \" loci.\" # report num loci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['6', '6', '13', '13', '18', '18', '18', '21', '21', '32', '32', '35', '35', '41']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print all_locus_names[0:14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['6' 'A' '30.00' '3']\n",
+      " ['6' 'C' '70.00' '7']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_list = []\n",
+    "for locus in unique_locus_names:\n",
+    "    indeces = [i for i, x in enumerate(all_locus_names) if x == locus]\n",
+    "    index_list.append(indeces)\n",
+    "\n",
+    "list_arrays_bytag = []\n",
+    "for indeces in index_list:\n",
+    "    miniarray = r[indeces]\n",
+    "    list_arrays_bytag.append(miniarray)\n",
+    "\n",
+    "print list_arrays_bytag[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 3, 2, 2, 2, 2, 2, 3, 2, 3, 3, 2, 3, 2, 2, 3, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "allele_counts = []\n",
+    "for array in list_arrays_bytag:\n",
+    "    count = array.shape[0]\n",
+    "    allele_counts.append(count)\n",
+    "\n",
+    "print allele_counts[0:19]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histogram of allele counts within individual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEjCAYAAAA/ugbCAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH6ZJREFUeJzt3Xu8pWPdx/HP18xknDVmJ4wxkhw6oSEh5FCK8PRQiYow\neZ6KenSgemX0SHrpQKmnJodxmEghQoUwijIzGBkzRExmUDbjNA7D8Hv+uK7NPWvW3nvtw1pr9lzf\n9+u1X/s+X7/7Xve6f/d13WtdSxGBmZmVa4V2B2BmZu3lRGBmVjgnAjOzwjkRmJkVzonAzKxwTgRm\nZoVzImgBSZMlndCmsiXpLEmPS5rWj/XnStotD0+UdF6D610v6bC+lmetJ2mspIWShvWwTEh6Yzfz\nDpR0VT/L/qqk0/u57s6S5lfG75S0cwPr9RjvYJ27tfEty4pMBPni9oikVSrTDpN0fRvDapYdgN2B\nMRGxTbuDaZZl+U23rCfFiHggIlaNiJeg7/FGxJSIeG8/yz4xIgbl2ETEmyPi+gaW63e8y6siE0E2\nDDiq3UH0VU93bd3YAJgbEc80Ix4zG/pKTgQnA1+UtGbtDEnjclV4eGXaK3dJkg6WdKOkH0h6QtJ9\nkrbL0+fl2sYnazY7WtLVkp6WNFXSBpVtb5rnLZB0t6QPV+ZNlvR/kq6U9Azwnjrxrivpsrz+vZIO\nz9MPBU4H3pWr/sfXWXcjSddKekzSo5Km1Dsm9UjaVtJN+Rjc3lO1XNKnJM3JTVR/6Nr/3HT1g3zM\nnpJ0h6S3dLONQ/I2ns7H/NN5+irA74B1834ulLRunfXXkvTbXM50SSdI+nNlfm+vw48lXZHLv1nS\nRpX52+VtPpn/b5enfwt4N3Bajuu0vJ3v1cR2maQv5OG5ko6VNDsfr7Mkjawsu5ekmfm43yTpbd0c\nr+Ml/SgPj5D0jKST8/hKkp6XNKp6vteLt7LJ3STdk8v9sSTlbR1ccxxD0hH1lq0T4yvNjZU4Pinp\ngXw+fq2y7Er5dXhc0mxg65ptzZW0W34/PCdpVGXelnl7I+rEu7uku/JrdxqgyrwlmkNVc23o7pwc\nciKiuD9gLrAbcDFwQp52GHB9Hh4HBDC8ss71wGF5+GBgMXAIqWZxAvAA8GNgReC9wNPAqnn5yXl8\nxzz/VODPed4qwLy8reHAlsCjwOaVdZ8Eticl7pF19ucG4CfASGALoBPYpRLrn3s4Fm8kNR2tCHTk\nbZ1Se6zy8ETgvDy8HvAY8IEc1+55vKPO8doHuBfYLO/j14Gb8rz3AbcAa5LegJsB63QT657ARnm5\nnYBnga3yvJ2B+b287hfkv5WBzfNx78vr8BiwTZ4/BbggzxsFPA58PM87II+vVXss8vg2wEPACnl8\ndN6XtSvHfBawft72jbx6nm4JPAK8k3TufTIvv2Kd/d0FuCMPbwf8A7i5Mu/2eud7bbx5WgCX59dp\nLOkc26PeOdbTsnVinMir51RXHD8HVgLeDiwCNsvzTwL+lI/J+vkYza9say6vnqvXAodX5p0M/LQ2\n3nzsnwb2A0YAXyC9tw+rja+bYzWgc3JZ+Su5RgDwDeBzkjr6se79EXFWpHbVX5JOzG9GxKKIuAp4\ngXSR7XJFRNwQEYuAr5Hu0tcH9iI13ZwVEYsj4jbgImD/yrqXRsSNEfFyRDxfDSJvY3vgKxHxfETM\nJNUCPtHITkTEvRFxdY67E/g+6YTuzUHAlRFxZY7ramAGKTHUOgL4dkTMiYjFwInAFkq1gheB1YBN\nAeVlHu4m1isi4h+RTAWuIt299kqpSe0/geMi4tmImA2cXVmkkdfhkoiYlvdhCinpQroY3BMR5+Z1\nzwfuAj7YzX5MIyX3XfOkj5JuQv5dWey0iJgXEQuAb5GSC8AE4GcRcXNEvBQRZ5MultvWKeovwMaS\n1iLdhJwBrCdpVdJrPLWnY1bHSRHxREQ8AFxX2f+BLlvr+Ih4LiJuB24nJQSADwPfiogFETEP+GEP\n2/gF+Zjl2shH87RaHwDujIhfR8SLwCnAvxoNdCDn5LKk6EQQEbNIdy7H9GP16pv2uby92mmrVsbn\nVcpdCCwA1iW14b8zV6GfkPQEcCDw+nrr1rEusCAinq5M+yfpjr1XktaWdIGkByU9BZxHukvqzQbA\n/jVx7wCs082yp1aWW0C6g1ovIq4FTiPVph6RNEnS6t3E+n5Jf81NN0+Q3sSNxAqptjOcJY9ldbiR\n16F6gXiWV1/fdUnHvKq31+BsUjIl/z+3Zn41tn/mMrriPLomzvUr818REc+RkvNOpEQwFbiJdOPQ\nn0TQ3f4PdNlG112XpY9Ldy4i3WytQ9r3l0m1iVpLbDPSrXxP77clDPCcXGYUnQiy44DDWfJN2/Vg\ndeXKtOoFoT/W7xrId2SjSM0D84CpEbFm5W/ViPivyro9dRH7EDBK0mqVaWOBBxuM68S8/bdGxOqk\ni1Ld9twa84Bza+JeJSJO6mbZT9csu1JE3AQQET+MiHeQmmveBHypdgOSViS9ub9LakJZE7iyEmtv\n3eh2kqr8YyrT1q8MN/I6dOch0gW6qvoa1IvtPGAfSW8nNYf9pmZ+NbaxuYyuOL9VE+fKuRZSz1RS\nM9CWwPQ8/j5S89QN3ayzrHZJ/DBLH5e6IuJx0t35R4CPkZrx6u3XEtvMtYdqGc/QzXWggXNyyCg+\nEUTEvaSmnSMr0zpJb+KDJA2T9ClSO+BAfEDSDpJeA/wv8Ndcvb0ceJOkj+cHWSMkbS1pswbjn0e6\ny/u2pJH5weGhpAtNI1YDFgJPSlqPOhfhbpwHfFDS+/IxGqn0Ec4xdZb9KXCspDcDSFpD0v55eGtJ\n75Q0gvSme55091brNaTnGJ3AYknvJz2L6fJvYC1Ja9QLNjfhXQxMlLSypE1ZsvlsIK/DlXndjyk9\ncP0IKaldXontDTXxzCddmM8FLsp371WfkTQmP/D8GukchdR+fkQ+ZpK0iqQ9a24Eqqbm/ZwdES+Q\n2/9JTZud3ayzVLzLiAtJ59Fr83n2uV6W/wVp3/ejfrMQwBXAmyV9KD8APpIlb/pmAjsqfddiDeDY\nyrzezskho/hEkH2T9LCw6nDSRfEx4M2ki+1A/IJU+1gAvIPcLJCbdN5LasN8iFQt/g7pBGvUAaSH\nWA8Bl5Dawa9pcN3jga1IbdZXkC6WvcoJaB/gq6Q3wjzS8VrqnIqIS0j7dEFufpoFvD/PXp10cXuc\nVNV/jPRgr3YbT5PepBfmZT8GXFaZfxdwPnBfbjJZqqkE+CywBukYn5uXX1TZfr9eh4h4jPSM4egc\n/5eBvSLi0bzIqcB++dMu1Xbts4G3snSzEKTz5SrgPtJD3hNyWTNI5+Zp+TjcS3r42Z2bSA9eu+7+\nZ5OSbXe1gZ7ibbfjSefI/aRjU++4VV0GbAz8Kz9vWEp+jfYnPYh+LC9/Y2X+1aQk/DfShxour8zr\n8ZwcSlS/tmS2/JP0HeD1EVH7Ud9Wlb8jqWa1QbXZQtJc0qdWGk3mZgPiGoEVQ+l7Am/LTSrbkJrQ\nLmlTLCNIX2g8vZu2a7OWcSKwkqxGavp6hlTd/x5waauDyM8dniB9wuqUVpdvVstNQ2ZmhXONwMys\ncE4EZmaFcyIwMyucE4GZWeGcCMzMCudEYGZWOCcCM7PCORGYmRXOicDMrHBOBGZmhXMiMDMrnBOB\nmVnhnAjMzArnRGBmVrjh7Q6gEaNHj45x48a1OwwzsyHllltueTQiOnpbbkgkgnHjxjFjxox2h2Fm\nNqRI+mcjy7lpyMyscE4EZmaFcyIwMyucE4GZWeGcCMzMCte0RCDpTEmPSJpVZ97RkkLS6GaVb2Zm\njWlmjWAysEftREnrA+8FHmhi2WZm1qCmJYKIuAFYUGfWD4AvA9Gsss3MrHEtfUYgaR/gwYi4vZXl\nmplZ91r2zWJJKwNfJTULNbL8BGACwNixY5sYmS0Pxh1zRbtDaLm5J+3Z7hBsOdHKGsFGwIbA7ZLm\nAmOAWyW9vt7CETEpIsZHxPiOjl67yjAzs35qWY0gIu4AXtc1npPB+Ih4tFUxmJnZ0pr58dHzgb8A\nm0iaL+nQZpVlZmb917QaQUQc0Mv8cc0q28zMGudvFpuZFc6JwMyscE4EZmaFcyIwMyucE4GZWeGc\nCMzMCudEYGZWOCcCM7PCORGYmRXOicDMrHBOBGZmhXMiMDMrnBOBmVnhnAjMzArnRGBmVjgnAjOz\nwjkRmJkVzonAzKxwTgRmZoVzIjAzK5wTgZlZ4ZqWCCSdKekRSbMq006WdJekv0m6RNKazSrfzMwa\n08wawWRgj5ppVwNviYi3AX8Hjm1i+WZm1oCmJYKIuAFYUDPtqohYnEf/CoxpVvlmZtaYdj4j+BTw\nu+5mSpogaYakGZ2dnS0My8ysLG1JBJK+BiwGpnS3TERMiojxETG+o6OjdcGZmRVmeKsLlHQwsBew\na0REq8s3M7MltTQRSNoD+DKwU0Q828qyzcysvmZ+fPR84C/AJpLmSzoUOA1YDbha0kxJP21W+WZm\n1pim1Qgi4oA6k89oVnlmZtY//maxmVnhnAjMzArnRGBmVjgnAjOzwjkRmJkVzonAzKxwTgRmZoVz\nIjAzK5wTgZlZ4ZwIzMwK50RgZlY4JwIzs8I5EZiZFc6JwMyscE4EZmaFcyIwMyucE4GZWeGcCMzM\nCudEYGZWOCcCM7PCORGYmRWuaYlA0pmSHpE0qzJtlKSrJd2T/7+2WeWbmVljmlkjmAzsUTPtGOCP\nEbEx8Mc8bmZmbdS0RBARNwALaibvA5ydh88G9m1W+WZm1phWPyNYOyIezsP/AtbubkFJEyTNkDSj\ns7OzNdGZmRWobQ+LIyKA6GH+pIgYHxHjOzo6WhiZmVlZWp0I/i1pHYD8/5EWl29mZjVanQguAz6Z\nhz8JXNri8s3MrEYzPz56PvAXYBNJ8yUdCpwE7C7pHmC3PG5mZm00vFkbjogDupm1a7PKNDOzvvM3\ni83MCudEYGZWOCcCM7PCORGYmRXOicDMrHBOBGZmhXMiMDMrnBOBmVnhnAjMzArXUCKQ9NZmB2Jm\nZu3RaI3gJ5KmSfpvSWs0NSIzM2uphhJBRLwbOBBYH7hF0i8k7d7UyMzMrCUafkYQEfcAXwe+AuwE\n/FDSXZI+1KzgzMys+Rp9RvA2ST8A5gC7AB+MiM3y8A+aGJ+ZmTVZo91Q/wg4HfhqRDzXNTEiHpL0\n9aZEZmZmLdFoItgTeC4iXgKQtAIwMiKejYhzmxadmZk1XaPPCK4BVqqMr5ynmZnZENdoIhgZEQu7\nRvLwys0JyczMWqnRRPCMpK26RiS9A3iuh+XNzGyIaPQZweeBX0l6CBDweuAjTYvKzMxapqFEEBHT\nJW0KbJIn3R0RL/a3UElfAA4DArgDOCQinu/v9szMrP/60unc1sDbgK2AAyR9oj8FSloPOBIYHxFv\nAYYBH+3PtszMbOAaqhFIOhfYCJgJvJQnB3DOAMpdSdKLpIfOD/VzO2ZmNkCNPiMYD2weETHQAiPi\nQUnfBR4gPXC+KiKuql1O0gRgAsDYsWMHWqyZmXWj0aahWaQHxAMm6bXAPsCGwLrAKpIOql0uIiZF\nxPiIGN/R0TEYRZuZWR2N1ghGA7MlTQMWdU2MiL37UeZuwP0R0Qkg6WJgO+C8fmzLzMwGqNFEMHEQ\ny3wA2FbSyqSmoV2BGYO4fTMz64NGPz46VdIGwMYRcU2+iA/rT4ERcbOkXwO3AouB24BJ/dmWmZkN\nXKOfGjqc9OB2FOnTQ+sBPyXdzfdZRBwHHNefdc3MbHA1+rD4M8D2wFPwyo/UvK5ZQZmZWes0mggW\nRcQLXSOShpO+R2BmZkNco4lgqqSvkr4EtjvwK+C3zQvLzMxapdFEcAzQSeoX6NPAlaTfLzYzsyGu\n0U8NvQz8PP+ZmdlypNFPDd1PnWcCEfGGQY/IzMxaqi99DXUZCexP+iipmZkNcQ09I4iIxyp/D0bE\nKaQftDczsyGu0aahrSqjK5BqCI3WJszMbBnW6MX8e5XhxcBc4MODHo2ZmbVco58aek+zAzEzs/Zo\ntGnof3qaHxHfH5xwzMys1fryqaGtgcvy+AeBacA9zQjKzMxap9FEMAbYKiKeBpA0EbgiIpb6ZTEz\nMxtaGu1iYm3ghcr4C3mamZkNcY3WCM4Bpkm6JI/vC5zdnJDMzKyVGv3U0Lck/Q54d550SETc1ryw\nzMysVRptGgJYGXgqIk4F5kvasEkxmZlZCzWUCCQdB3wFODZPGgGc16ygzMysdRqtEfwHsDfwDEBE\nPASs1qygzMysdRpNBC9ERJC7opa0SvNCMjOzVmo0EVwo6WfAmpIOB65hAD9SI2lNSb+WdJekOZLe\n1d9tmZnZwDT6qaHv5t8qfgrYBPhGRFw9gHJPBX4fEftJeg3pQbSZmbVBr4lA0jDgmtzx3EAu/l3b\nWwPYETgYICJeYMkvq5mZWQv12jQUES8BL+cL+GDYEOgEzpJ0m6TT6z1zkDRB0gxJMzo7OwepaDMz\nq9XoM4KFwB2SzpD0w66/fpY5HNgK+L+I2JL0SaRjaheKiEkRMT4ixnd0dPSzKDMz602jXUxcnP8G\nw3xgfkTcnMd/TZ1EYGZmrdFjIpA0NiIeiIhB61coIv4laZ6kTSLibmBXYPZgbd/MzPqmt6ah33QN\nSLpoEMv9HDBF0t+ALYATB3HbZmbWB701Daky/IbBKjQiZpJ+7MbMzNqstxpBdDNsZmbLid5qBG+X\n9BSpZrBSHiaPR0Ss3tTozMys6XpMBBExrFWBmJlZe/Tl9wjMzGw55ERgZlY4JwIzs8I5EZiZFc6J\nwMyscE4EZmaFcyIwMyucE4GZWeGcCMzMCudEYGZWOCcCM7PCORGYmRXOicDMrHBOBGZmhXMiMDMr\nnBOBmVnhnAjMzArXtkQgaZik2yRd3q4YzMysvTWCo4A5bSzfzMxoUyKQNAbYEzi9HeWbmdmr2lUj\nOAX4MvBym8o3M7Os5YlA0l7AIxFxSy/LTZA0Q9KMzs7OFkVnZlaedtQItgf2ljQXuADYRdJ5tQtF\nxKSIGB8R4zs6Olodo5lZMVqeCCLi2IgYExHjgI8C10bEQa2Ow8zMEn+PwMyscMPbWXhEXA9c384Y\nzMxK5xqBmVnhnAjMzArnRGBmVjgnAjOzwjkRmJkVzonAzKxwTgRmZoVzIjAzK5wTgZlZ4ZwIzMwK\n50RgZlY4JwIzs8I5EZiZFc6JwMyscE4EZmaFcyIwMyucE4GZWeGcCMzMCudEYGZWOCcCM7PCORGY\nmRWu5YlA0vqSrpM0W9Kdko5qdQxmZvaq4W0oczFwdETcKmk14BZJV0fE7DbEYmZWvJbXCCLi4Yi4\nNQ8/DcwB1mt1HGZmlrT1GYGkccCWwM115k2QNEPSjM7OzlaHZmZWjLYlAkmrAhcBn4+Ip2rnR8Sk\niBgfEeM7OjpaH6CZWSHakggkjSAlgSkRcXE7YjAzs6QdnxoScAYwJyK+3+ryzcxsSe2oEWwPfBzY\nRdLM/PeBNsRhZma04eOjEfFnQK0u18zM6vM3i83MCudEYGZWOCcCM7PCORGYmRXOicDMrHBOBGZm\nhXMiMDMrnBOBmVnhnAjMzArXjh+mMTPrl3HHXNHuEFpu7kl7Nr0M1wjMzArnRGBmVjgnAjOzwjkR\nmJkVzonAzKxwTgRmZoVzIjAzK5wTgZlZ4ZwIzMwK50RgZla4tiQCSXtIulvSvZKOaUcMZmaWtDwR\nSBoG/Bh4P7A5cICkzVsdh5mZJe2oEWwD3BsR90XEC8AFwD5tiMPMzGhPIlgPmFcZn5+nmZlZGyyz\n3VBLmgBMyKMLJd3dznj6aTTwaLuDaKHS9hfauM/6TjtKBfw6t9QAX+cNGlmoHYngQWD9yviYPG0J\nETEJmNSqoJpB0oyIGN/uOFqltP0F73Mplvd9bkfT0HRgY0kbSnoN8FHgsjbEYWZmtKFGEBGLJX0W\n+AMwDDgzIu5sdRxmZpa05RlBRFwJXNmOsltsSDdt9UNp+wve51Is1/usiGh3DGZm1kbuYsLMrHBO\nBE1QWhcaks6U9IikWe2OpVUkrS/pOkmzJd0p6ah2x9RskkZKmibp9rzPx7c7plaQNEzSbZIub3cs\nzeJEMMgK7UJjMrBHu4NoscXA0RGxObAt8JkCXudFwC4R8XZgC2APSdu2OaZWOAqY0+4gmsmJYPAV\n14VGRNwALGh3HK0UEQ9HxK15+GnShWK5/oZ8JAvz6Ij8t1w/ZJQ0BtgTOL3dsTSTE8HgcxcahZE0\nDtgSuLm9kTRfbiaZCTwCXB0Ry/s+nwJ8GXi53YE0kxOB2QBIWhW4CPh8RDzV7niaLSJeiogtSD0C\nbCPpLe2OqVkk7QU8EhG3tDuWZnMiGHwNdaFhQ5+kEaQkMCUiLm53PK0UEU8A17F8PxvaHthb0lxS\nE+8uks5rb0jN4UQw+NyFRgEkCTgDmBMR3293PK0gqUPSmnl4JWB34K72RtU8EXFsRIyJiHGk9/G1\nEXFQm8NqCieCQRYRi4GuLjTmABcu711oSDof+AuwiaT5kg5td0wtsD3wcdJd4sz894F2B9Vk6wDX\nSfob6Ybn6ohYbj9SWRJ/s9jMrHCuEZiZFc6JwMyscE4EZmaFcyIwMyucE4GZWeGcCIYYSSHpe5Xx\nL0qaOEjbnixpv8HYVi/l7C9pjqTr+rDOwvx/XG+9nDayzEBIenfufXNm/jx9dd5NfdzWzl29Wkra\nu7feaiV9U9JuPW2nPyTNlTS6v+sPoNw1Jf13q8u1JTkRDD2LgA+1403bE0l9+bW7Q4HDI+I9zYqn\nyQ4Evh0RW0TEc9UZEbFdfzcaEZdFxEm9LPONiLimv2Usg9YEnAjazIlg6FlM+tm8L9TOqL2jr9xF\n7yxpqqRLJd0n6SRJB+a+5e+QtFFlM7tJmiHp77mvla6Oxk6WNF3S3yR9urLdP0m6DJhdJ54D8vZn\nSfpOnvYNYAfgDEkn1yy/qqQ/Sro1r9djr63dxdXIMpLWkXRDvqufJendddbdNfdDf4fSby6sKOkw\n4MPA/0qaUmed6jG/XtKvJd0laUr+NnLX71XcJelW4EOVdQ+WdJqkNST9U9IKefoqkuZJGlF9jXvY\nzkRJX6yMz1LqGA9Jv5F0S67RTOjp+OblD83nwjRJP5d0Wp7eIemifFynS9q+UvaZed/vk3RkZVv/\nk2OZJenzefJJwEb5dThZ0jmS9q2sM0XSPvnYXJq3e4+k4yrLHJTjmynpZ0pdwVtfRIT/htAfsBBY\nHZgLrAF8EZiY500G9qsum//vDDxB+mboiqS+j47P844CTqms/3vSDcLGpJ5TRwITgK/nZVYEZgAb\n5u0+A2xYJ851gQeADtJvY18L7JvnXQ+Mr7POcGD1PDwauJdXv/TYtS/jgFl5uLu4GlnmaOBrefow\nYLWaWEaSepF9Ux4/h9Sx3FLHufb1qRzzJ0l9Ta1A+ub1DpXtbgwIuBC4PK9zMHBaHr4UeE8e/ghw\nerXsXrYzEfhiJaZZwLg8PCr/XylPXyuPzwVG13kN5wKjSF1O/6kS3y+AHfLwWFJXG11l35SP9Wjg\nsbzuO4A7gFWAVYE7ST22vvJa5fV3An6Th9cA7iedFwcDDwNrVWIfD2wG/BYYkdf5CfCJdr9Ph9qf\nawRDUKReLs8Bjuxt2YrpkfrQXwT8A7gqT7+D9GbscmFEvBwR9wD3AZsC7wU+odT98M2kN+PGeflp\nEXF/nfK2Bq6PiM5I3W5MAXbsJUYBJyp1YXANqfvutXtYvqe4eltmOnCI0vOVt0b6TYGqTYD7I+Lv\nefzsBuKvNS0i5kfEy8BM0nHeNG/3nkhXru46MfslKQFA6ufmlzXzG91OrSMl3Q78ldQ5Yu3xqtoG\nmBoRCyLiReBXlXm7Aafl43oZsLpST6wAV0TEooh4lNRd9dqkJHhJRDwT6TcNLgaWqoVFxFRSX10d\nwAHARfn8gdSlxWORmuMuztvclZRkpudYdgXe0OCxsKwv7bq2bDkFuBU4qzJtMbm5LzcrvKYyb1Fl\n+OXK+MsseR7U9jkSpAv05yLiD9UZknYm1QgGy4GkGsQ7IuJFpV4fR/awfHdxjettmbzcjqQfHZks\n6fsRcc7Awl9K9Zi/RN/eb5eRkuIo0oXu2j6s+8p5kI2EV16v3YB3RcSzkq6n5+PbkxWAbSPi+erE\n3Po1kP2GdJNzECkBHlKZ3t25eXZEHNvHMqzCNYIhKiIWkJoDqh28zSVdNAD2JlXJ+2p/SSsoPTd4\nA3A3qQO9/1LqdhlJb5K0Si/bmQbsJGl0brM9AJjayzprkPp/f1HSe4ANelm+kbjqLiNpA+DfEfFz\n0q9PbVWz3t3AOElvzOMfbyD+RtyVt9v1XOaAegvlu+bpwKmkJp+X+rCdueT9kbQVqSkM0vF9PCeB\nTUk/sdmT6aTX8LVKHwb4z8q8q4DPdY1I2qKXbf0J2FfSyvk1+o887WlgtZplJwOfB4iI6rOn3SWN\nUvqk1r7AjcAfgf0kvS7HMSq/ttYHrhEMbd8j9XTa5efApbnq/3v6d7f+AOkivjpwREQ8L+l0UrPG\nrfmBZyfpjditiHhY6aOQ15Hu2q6IiEt7KXsK8FtJd5Da8nvr4riRuLpbZmfgS5JeJD13+URN/M9L\nOgT4Vb4ITgd+2ks8vcrbnQBcIelZ0sWw9kLY5Zek5pid+7idi0jNYXeSmsO6mrd+DxwhaQ4p0f21\nl1gflHQi6XxYQHo9nsyzjwR+nJvxhgM3AEf0sK1bJU3O24L0zOM2AEk3Kn3c93cR8aWI+HeO8Tc1\nm5mW920McF5EzMjrfx24KteCXwQ+A/yzp32zJbn3UTPrlqRVI2JhToaXAGdGxCVNLnNl0rOrrSLi\nyTztYNIHDD7b07rWP24aMrOeTMwPYWeRPsFTe5c+qJS+LDcH+FFXErDmc43AzKxwrhGYmRXOicDM\nrHBOBGZmhXMiMDMrnBOBmVnhnAjMzAr3/1XBuZyfLINBAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f36331649d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(allele_counts, bins=np.arange(6)-0.5)\n",
+    "plt.xticks(range(5))\n",
+    "plt.suptitle(\"Number of alleles at genotype within individual\")\n",
+    "plt.xlabel(\"Number of alleles of individual genotype\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.show()"
    ]
   },
   {
