--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2794,8 +2794,25 @@
     "editable": true
    },
    "source": [
-    "\n"
+    "## Fis by population plots\n",
+    "\n",
+    "From [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/Fis_from_SNP_Genepop.ipynb), I made plots of Fis by population using the SNP genepop file. **Note** that about half of the Fis estimates were NAs, and I'm not sure what that means about the data.\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_WA_Strait_20170317.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_WA_SanJuans_20170317.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_WA_Dabob_20170317.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_CA_20170317.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_AK_20170317.png?raw=true)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
