updated notebook for rank afs and added plots

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2761,7 +2761,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Number of individual genotypes with different numbers of alleles\n",
     "\n",
@@ -2778,6 +2781,15 @@
     "Notebook [here](http://localhost:8888/notebooks/Git_repo/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb).\n",
     "\n",
     "It would also be nice to know what the average allele frequency is of these additional alleles. If it tends to be below a certain threshold, maybe we can convince ourselves that it's mostly sequencing error and worth throwing out. How to get that information though...\n",
+    "\n",
+    "## Rank decreasing allele frequencies for genotypes with N alleles, within an individual\n",
+    "\n",
+    "I took an individual .alleles file (from Scallop FG001) and pulled out just those tags with 2,3,4, and 5 alleles respectively. Then I a\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "I want to see whether the number of genotypes at the SNP level with more than two alleles was similar to that of the haplotype level, but I'm finding it pretty hard to get that SNP data out of the individual .snps, .tags, and .alleles files. \n",
     "\n",
@@ -2796,6 +2808,8 @@
    "source": [
     "## Fis by population plots\n",
     "\n",
+    "**20170318**\n",
+    "\n",
     "From [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/Fis_from_SNP_Genepop.ipynb), I made plots of Fis by population using the SNP genepop file. **Note** that about half of the Fis estimates were NAs, and I'm not sure what that means about the data.\n",
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis_WA_Strait_20170317.png?raw=true)\n",
@@ -2809,7 +2823,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
