added script for plot rank dec AFs across samples, and notebook

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2780,11 +2780,25 @@
     "\n",
     "Notebook [here](http://localhost:8888/notebooks/Git_repo/CRAGIG_run1/Notebooks/data_processing_notebooks/Plot_incidence_genotypes_morethantwoalleles_from_haplotypesfile.ipynb).\n",
     "\n",
-    "It would also be nice to know what the average allele frequency is of these additional alleles. If it tends to be below a certain threshold, maybe we can convince ourselves that it's mostly sequencing error and worth throwing out. How to get that information though...\n",
+    "It would also be nice to know what the average allele frequency is of these additional alleles. If it tends to be below a certain threshold, maybe we can convince ourselves that it's mostly sequencing error and worth throwing out. How to get that information though... I was also thinking that if the issue is that a small amount of sequencing error can lead to a huge genotyping error, then I should probably filter for some threshold, like a haplotype can only be kept if it exists in at least two individuals. For individuals with three alleles at a single genotype, I'd be curious to know the frequency of the minor allele. That would help me inform how to best filter haplotypes. \n",
     "\n",
     "## Rank decreasing allele frequencies for genotypes with N alleles, within an individual\n",
     "\n",
-    "I took an individual .alleles file (from Scallop FG001) and pulled out just those tags with 2,3,4, and 5 alleles respectively. Then I a\n",
+    "**20170318**\n",
+    "\n",
+    "I decided to explore the individual alleles files to better understand the minor allele frequencies, [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/exploring_ind_alleles_files.ipynb). I took an individual .alleles file (from Scallop FG001) and pulled out just those tags with 2,3,4, and 5 alleles respectively. Then I extracted the allele frequency, put them in rank decreasing order, and plotted them. I did this to help me understand whether these additional alleles are really uncommon, or if they're pretty evenly distributed. Here are the plots:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/rank_afs_2alls_20170318.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/rank_afs_3alls_20170318.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/rank_afs_4alls_20170318.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/rank_afs_5alls_20170318.png?raw=true)\n",
+    "\n",
+    "It would be pretty cool to be able to do this across individuals - maybe try writing a script that collects allele frequency data from a set of samples.\n",
+    "\n",
+    "## Making same rank decreasing AF plots, but using genotypes from multiple individuals\n",
+    "\n",
+    "**20170318**\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -2793,9 +2807,7 @@
     "\n",
     "I want to see whether the number of genotypes at the SNP level with more than two alleles was similar to that of the haplotype level, but I'm finding it pretty hard to get that SNP data out of the individual .snps, .tags, and .alleles files. \n",
     "\n",
-    "I was also thinking that if the issue is that a small amount of sequencing error can lead to a huge genotyping error, then I should probably filter for some threshold, like a haplotype can only be kept if it exists in at least two individuals. For individuals with three alleles at a single genotype, I'd be curious to know the frequency of the minor allele. That would help me inform how to best filter haplotypes. \n",
-    "\n",
-    "I think it's worth delving into the individual .alleles files"
+    "In the meantime, I can make Fis plots from the SNP Genepop file."
    ]
   },
   {
