added imgs for NB, updated NB

--- a/CRAGIG_run1/Notebooks/script_demos_notebooks/plot_rank_dec_AFs_from_set_individuals.ipynb
+++ b/CRAGIG_run1/Notebooks/script_demos_notebooks/plot_rank_dec_AFs_from_set_individuals.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -102,13 +102,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Made the plots here in the output directory:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/show_plots_made_20170318.png?raw=true)\n",
+    "\n",
+    "And the plots look like this:\n",
+    "\n",
+    "![image]()\n",
+    "![image]()\n",
+    "![image]()\n",
+    "![image]()"
+   ]
   }
  ],
  "metadata": {
