--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2799,6 +2799,13 @@
     "\n",
     "**20170318**\n",
     "\n",
+    "I wrote a script that allows me to do the same, but incorporate genotypes from multiple individuals. Here, I included FG001, FG002, and FG003. [Notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/script_demos_notebooks/plot_rank_dec_AFs_from_set_individuals.ipynb), [script here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/plot_dec_rank_AFs_across_indvs.py).\n",
+    "\n",
+    "And the plots:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/rank_dec_afs_w_2_alls.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/rank_dec_afs_w_3_alls.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/rank_dec_afs_w_4_alls.png?raw=true)\n",
     "\n",
     "\n",
     "\n",
