--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2848,7 +2848,15 @@
    "source": [
     "## Distribution of position of SNP in tag\n",
     "\n",
-    "I just got off the phone with a peer who says that they see a higher abundance of SNPs toward the end of the tag, causing them to believe that Stacks may be calling SNPs that aren't really SNPs. This is after they use FASTQC and a quality filter cut off, just like I used. It would be worth it to see the distribution of positin of SNPs in tags."
+    "I just got off the phone with a peer who says that they see a higher abundance of SNPs toward the end of the tag, causing them to believe that Stacks may be calling SNPs that aren't really SNPs. This is after they use FASTQC and a quality filter cut off, just like I used. It would be worth it to see the distribution of positin of SNPs in tags.\n",
+    "\n",
+    "I just wrote a brief script to plot this distribution from the SNP Genepop file that comes out of ``populations``. Script is [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/dist_SNPpos_intags.py)!\n",
+    "\n",
+    "And here's the plot it made:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/snp_position_in_tag_20170322.png?raw=true)\n",
+    "\n",
+    "It doesn't look like there are more SNPs toward the end of the tag, which doesn't make me feel any more dubious about SNPs later in the tag."
    ]
   },
   {
