--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2686,6 +2686,7 @@
     "\n",
     "And [here's the script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filter_missval.py).\n",
     "\n",
+    "\n",
     "## Convert back to Genepop\n",
     "\n",
     "Then I wrote a script that takes these filtered loci and writes them back to a regular genepop file, so I can try to make a DAPC and process it in Genepop for HWE.\n",
@@ -2704,7 +2705,37 @@
     "Where:\n",
     "- WA1 = Sekiu\n",
     "- WA2 = San Juans\n",
-    "- WA3 = Dabob"
+    "- WA3 = Dabob\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Second DAPC, after filter for MAF\n",
+    "**20170322**\n",
+    "\n",
+    "Now, do the same except filter for minor allele frequency of .05 across populations.\n",
+    "\n",
+    "### Filter for MAF\n",
+    "\n",
+    "I wrote a quick script to filter for MAF, but not at the population level. I have only 7 individuals for AK, and am having trouble understanding why filter for MAF at the population level. So while I wait, I wanted to try this.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Convert back to Genepop\n",
+    "\n",
+    "### DAPC"
    ]
   },
   {
