deleted unnecessary file

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2716,7 +2716,7 @@
     "\n",
     "### Filter for MAF\n",
     "\n",
-    "I wrote a quick script to filter for MAF, but not at the population level. I have only 7 individuals for AK, and am having trouble understanding why filter for MAF at the population level. So while I wait, I wanted to try this.\n"
+    "I wrote a quick script to filter for MAF, but not at the population level. I have only 7 individuals for AK, and am having trouble understanding why filter for MAF at the population level. So while I wait, I wanted to try this. Script here\n"
    ]
   },
   {
