added DAPC plot, updated R script

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2707,6 +2707,8 @@
     "- WA2 = San Juans\n",
     "- WA3 = Dabob\n",
     "\n",
+    "This DAPC was before any filtering for MAF, but after filtering for missing values.\n",
+    "\n",
     "\n",
     "\n",
     "## Second DAPC, after filter for MAF\n",
@@ -2820,7 +2822,11 @@
    "source": [
     "### DAPC\n",
     "\n",
-    "Running in RStudio...\n"
+    "Running in RStudio... R script here.\n",
+    "\n",
+    "DAPC:\n",
+    "\n",
+    "![image]()\n"
    ]
   },
   {
